// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App generate tweetstorm and dismiss notification 1`] = `
<div>
  <article
    class="container content-center mx-auto m-1 p-4"
  >
    <header
      class="flex flex-row justify-between"
    >
      <div>
        NavBar
      </div>
    </header>
    <h1
      class="font-bold my-4 text-5xl text-center tweries-font-family"
    >
      Tweries
    </h1>
    <h2
      class="my-4 text-center"
    >
      When 280 characters just isn't enough
    </h2>
    <p
      class="my-4 text-center"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-twitter fa-w-16 fa-3x tweries-color-blue"
        data-icon="twitter"
        data-prefix="fab"
        focusable="false"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z"
          fill="currentColor"
        />
      </svg>
    </p>
    <form
      class="flex flex-col"
    >
      <label
        class="text-sm"
        for="reply-to"
      >
        Optional: reply to Tweet URL
      </label>
      <textarea
        class="p-2 tweries-border tweries-background-color-blue-white"
        data-testid="reply-to"
        name="reply-to"
        placeholder="Optional: reply to Tweet URL"
        rows="1"
      />
      <p
        class="italic py-4 text-sm"
      >
        Start typing, to insert a break prior to reaching 280 characters please use Newline(s)
      </p>
      <label
        class="text-sm"
        for="source"
      >
        What's happening?
      </label>
      <textarea
        class="p-2 tweries-background-color-blue-white tweries-border"
        data-testid="source"
        name="source"
        placeholder="What's happening?"
        rows="8"
      />
      <p
        class="text-right text-xs text-gray-700"
      />
      <label
        class="text-sm"
        for="hashtags"
      >
        #hashtags
      </label>
      <textarea
        class="p-2 tweries-background-color-blue-white tweries-border"
        data-testid="hashtags"
        name="hashtags"
        placeholder="#hashtags"
        rows="1"
        type="text"
      />
      <p
        class="text-right text-xs text-gray-700"
      />
      <button
        class="bg-gray-300 border border-gray-500 font-bold my-4 px-6 py-2 rounded self-center cursor-auto"
        data-testid="tweet"
        disabled=""
      >
        Tweet
      </button>
    </form>
    <div>
      Footer
    </div>
  </article>
</div>
`;

exports[`App loading 1`] = `
<div>
  <article
    class="container content-center mx-auto m-1 p-4 text-center"
  >
    ...
  </article>
</div>
`;

exports[`App unauthenticated user 1`] = `
<div>
  <article
    class="container content-center mx-auto m-1 p-4"
  >
    <header
      class="flex flex-row justify-between"
    >
      <span
        class="my-4"
      />
    </header>
    <h1
      class="font-bold my-4 text-5xl text-center tweries-font-family"
    >
      Tweries
    </h1>
    <h2
      class="my-4 text-center"
    >
      When 280 characters just isn't enough
    </h2>
    <p
      class="my-4 text-center"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-twitter fa-w-16 fa-3x tweries-color-blue"
        data-icon="twitter"
        data-prefix="fab"
        focusable="false"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z"
          fill="currentColor"
        />
      </svg>
    </p>
    <p
      class="flex justify-center"
    >
      <button
        class="font-bold my-4 px-6 py-2 rounded tweries-background-color-blue-button"
        data-testid="login"
      >
        Log in
      </button>
    </p>
    <div>
      Footer
    </div>
  </article>
</div>
`;
